style.css
body{
    z-index: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.topnav{
    z-index: 1;
    font-size: 24px;
    position: fixed;
    top: 0px;
    left: 0px;
    padding-top: 10px;
    padding-left: 10px;
    height: 50px;
    display: block;
    background-color: white;
}

.nav th{
    width: 80%;
    text-align: left;
    padding-left: 20px;
    font-size: 24px;
}

.nav td{
    text-align: right;
    padding-right: 30px;
    font-size: 20px;
    color: #616161;
}

.nav a{
    color: #616161;
}

.landing{
    position: absolute;
    padding: 200px 100px;
}

.landpic{
    position: absolute;
    top: 135px;
    left: 750px;
}

#landpic{
    width: 350px;
}

.about{
    position: absolute;
    top: 550px;
    left: 100px;
    padding-bottom: 50px;
    padding-top: 50px;
}

.about th{
    width: 290px;
    padding-top: 0px;
    padding-left: 0px;
    vertical-align: top;
}

#profpic{
    width: 290px;
}

.about td{
    padding-left: 50px;
    width: 700px;
    line-height: 1.3;
    font-size: 18px;
}

.prjs{
    position: relative;
    left: 100px;
    top: 1200px;
}

.prjlist td{
    width: 325px;
    padding-right: 50px;
    padding-top: 0px;
    text-align: center;
    vertical-align: top;
    border-color: black;
    border-style: solid;
}

.prjlist img{
    height: 275px;
}


h2{
    color: #ff9933;
    font-size: 46px;
  }
 
h4{
    color: #616161;
    font-size: 18px;
  }

h3{
    color: #ff9933;
    font-size: 30px;
}

.about a{
    color: black;
}

a:hover{
    color:#ffa852;
    transition: 0.1s;
}

